# sharedptrtest

./: CMakeLists.txt  container.cpp  container.h  extracodepath.cpp  main.cpp  memberofwhichdestructorisnotcalled.cpp  memberofwhichdestructorisnotcalled.h  testobject.cpp  testobject.h  testobjectbase.cpp  testobjectbase.h  testobjectbasebase.cpp  testobjectbasebase.h  wrap.cpp  wrap.h
